tdf#92308: Dont crash on "File > Send > Email Document"

- crashed due to out-of-range index with empty vector
- kill pruposeless manual index fiddling for good
- add trivial test

Change-Id: Ic224c70f432d2b26718e05aa5a2742461cfb7bec